# BIM_RAG

./: .env  .gitignore  CLAUDE.md  CODEX.md  PROJECT_CONTEXT.md  README.md  Start BIM RAG.lnk  environment.yml  pyproject.toml  temp.md  workflow.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  app.py
backend/app/config/: __init__.py  database.py  logging.py  settings.py  trace.py
backend/app/db/: models.py  session.py
backend/app/evaluation/: benchmark_v003_results.json  cases.py  measure_slate.py  migrate_query_logs.py  query_trace.jsonl  rag_calibration_v001.jsonl  render_v3_from_log.py  run_benchmark_v003.py  run_test_query_suite.py  run_test_query_v4.py
backend/app/llm/: __init__.py  answerer.py  binder_context.py  binder_context_v2.py  budget.py  client.py  context.py  pricing.py  router.py  schemas.py  schemas_v2.py  serialization.py  translate.py  validation.py
backend/app/query/: catalog_answer.py  selection.py  service.py  session.py  trace_v2.py
backend/app/shared/: types.py
backend/app/viewer/: actions.py  assets.py  details.py
backend/src/api/: app.py
backend/src/config/: logging.py  settings.py
backend/src/db/: __init__.py  apply_catalog_migration.py  bootstrap_readonly_role.py  models.py  session.py
backend/src/evaluation/: __init__.py  benchmark_v002_sql_graph_cases.jsonl  benchmark_v003_e2e_cases.jsonl  cases.py  hybrid_failure_cases_v001.jsonl  metrics.py  run_benchmark_v003.py
backend/src/ingestion/: README.md  __init__.py  embeddings.py  entities.py  relationships.py
backend/src/llm/: answerer.py  client.py  context.py  router.py  schemas.py  translate.py  validation.py
backend/src/query/: __init__.py  service.py  session.py
backend/src/shared/: __init__.py  errors.py  types.py
backend/src/viewer/: __init__.py
backend/tests/: conftest.py  test_catalog_models.py  test_cors.py  test_entity_details.py  test_health_endpoint.py  test_ingestion_compat.py  test_logging_redaction.py  test_models_endpoints.py  test_no_openai_deterministic.py  test_openai_usage_output.py  test_openapi_contract.py  test_plan_schema_validation.py  test_query_endpoint.py  test_request_response_schemas.py  test_selection.py  test_session_state.py  test_settings.py  test_trace_mode.py  test_viewer_actions.py  test_viewer_assets.py
backend/tests/binding/: conftest.py  test_answer_contract.py  test_compile.py  test_field_concepts.py  test_ledger.py  test_lexical_values.py  test_roles.py  test_slate.py  test_spans.py  test_v4_budget_results.py  test_v4_contract.py  test_v4_ledger.py  test_validate.py
backend/tests/query_graph/: test_registry.py
backend/tests/query_hybrid/: test_combination.py  test_constraint_preservation.py  test_evidence.py  test_group_allocation.py  test_group_viewer.py  test_llm_retry.py  test_policy_plan.py  test_session_and_viewer.py  test_storey_bands.py  test_translate_catalog.py  test_validation.py  test_viewer_limits.py
backend/tests/query_live/: conftest.py  test_benchmark.py  test_binding_execution_live.py  test_catalog.py  (+19 more)
(+362 files in other folders)
