[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bim_rag"
version = "0.1.0"
requires-python = ">=3.11"
description = "BIM IFC to PostgreSQL + pgvector pipeline"
dependencies = [
    "psycopg2-binary",
    "sqlalchemy>=2.0",
    "pgvector>=0.5",
    "python-dotenv",
    "sentence-transformers",
]

[project.scripts]
bim-stage1 = "bim_rag.stage1_import:main"
bim-stage2 = "bim_rag.stage2_embed:main"
bim-pipeline = "bim_rag.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
